updated images, more work on background methods

--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -8,12 +8,15 @@
 \usepackage{verbatim}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{algorithmic}
 \usepackage{setspace}
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{cancel}
 \usepackage[colorlinks=true]{hyperref}
+
+\usepackage{algorithm}
+\numberwithin{algorithm}{chapter}
+\usepackage{algorithmic}
 
 \doublespacing
 
